# the-strategists-remastered

./: .dockerignore  .gitignore  DEPLOY.md  README.md  docker-compose.headless.yml  docker-compose.yml  logo.ai
.github/workflows/: publish.yml
.husky/: pre-commit
docs/: deployment.md  google-integration.md  self-host.md
google-utils/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
google-utils/src/: cli.py  utils.py  wrappers.py
model/: .gitignore  README.md  main.py  pyproject.toml
model/src/: mode.py  model.py  train.py
permissions/: Dockerfile  README.md  main.py  pyproject.toml
permissions/permissions/: google.py  types.py
prediction/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
prediction/src/: classifiers.py  cli.py  configuration.py  predictor.py
predictions/: .dockerignore  .gitignore  Dockerfile  README.md  infer_example.py  main.py  pyproject.toml
predictions/predictions/: constants.py  data.py  mlflow.py  models.py  pipeline.py  service.py  types.py
resources/secrets/: .env.example  .gitignore
server/: .gitignore  Dockerfile  README.md  pom.xml
server/src/main/resources/: application-dev.yml  application.yml  data.sql
shared/: .gitignore
storage/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
storage/storage/: google.py  types.py
web/: .dockerignore  .env  .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  README.md  craco.config.js  host-local-mac.sh  hydration.sh  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.mts
web/netlify/edge-functions/: proxy-sse.mts
web/netlify/functions/: proxy.mts
web/nginx/: react.conf
web/public/: index.html  manifest.json
web/src/: App.css  App.scss  App.test.tsx  App.tsx  StylingConstants.ts  index.css  index.tsx  reportWebVitals.ts  setupProxy.js  store.ts
web/src/components/: Actions.tsx  Activity.tsx  ActivityTimeline.tsx  AdminDashboard.tsx  AdminLobby.tsx  Advices.tsx  Bankruptcy.tsx  Confetti.tsx  Dashboard.tsx  Empty.tsx  Feed.tsx  InvestModal.tsx  Lobby.tsx  Login.tsx  Logo.tsx  Map.tsx  MapModal.tsx  Modals.tsx  NotFound.tsx  PlayerDashboard.tsx  Portfolio.tsx  ResetModal.tsx  Stats.tsx  Update.tsx  WinModal.tsx  index.ts
web/src/features/activities/: slice.ts  state.ts
web/src/features/advices/: state.ts
web/src/features/game/: slice.ts  state.ts
web/src/features/login/: state.ts
web/src/features/predictions/: state.ts
web/src/features/trends/: state.ts
web/src/hooks/: index.ts  useActivities.ts  useAdvices.ts  useGame.ts  useLogin.ts  useNotification.ts  usePredictions.ts  useTrends.ts
web/src/notification/: index.ts
web/src/providers/: index.ts  themeProvider.tsx
web/src/redux/: index.ts  rootReducer.ts  store.ts
web/src/redux/activity/: actions.ts  hooks.ts  reducer.ts
web/src/redux/advices/: actions.ts  hooks.ts  index.ts  reducer.ts
web/src/redux/game/: gameActions.ts  gameReducer.ts  gameTypes.ts
web/src/theme/: provider.tsx
web/src/utils/: utils.ts
(+368 files in other folders)
