[tool.poetry]
name = "strategists-model"
version = "0.1.0"
description = "Machine Learning models project for The Strategists"
authors = ["Shubham Chawla <shubham_chawla@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
