[project]
name = "strategists-prediction"
version = "0.1.0"
description = "Machine Learning prediction model for The Strategists"
authors = [{ name = "Shubham Chawla", email = "shubham_chawla@live.com" }]
requires-python = ">=3.12, <4"
readme = "README.md"
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[tool.hatch.build]
include = ['src/**'] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
